--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <img src="../images/socialize.jpg" alt="" class="rounded img-fluid">
+            <img src="images/socialize.jpg" alt="" class="rounded img-fluid">
           </div>
           <div class="col-lg-6">
              <h3>Connect Worldwide</h3>
@@ -210,7 +210,7 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <img src="../images/develop.jpg" alt="" class="rounded img-fluid">
+            <img src="images/develop.jpg" alt="" class="rounded img-fluid">
           </div>
         </div>
       </div>
@@ -228,7 +228,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <img src="../images/enjoy.jpg" alt="" class="rounded img-fluid">
+            <img src="images/enjoy.jpg" alt="" class="rounded img-fluid">
           </div>
           <div class="col-lg-6 text-muted">
             <h3 >Enjoy the Life</h3>
